--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 }
 .cart-item .right-block {
   padding: 0 20px;
+  text-align: center;
 }
 .cart-item-actions {
   margin-top: 20px;
@@ -19,7 +20,7 @@ body {
 .action-icons {
   height: 25px;
   width: 25px;
-  margin-right: 10px;
+  margin: 0.5rem ;
 }
 .action-icons:hover {
   cursor: pointer;
